# split

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
cmake/: SplitConfig.cmake
include/: CMakeLists.tx  CMakeLists.txt
include/split/: split.hpp
src/: CMakeLists.txt  split.cpp
tests/: CMakeLists.txt  split_tests.cpp
